--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.7.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
